<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit"/>

    <item
        android:id="@+id/action_manage_locations"
        android:icon="@drawable/ic_location"
        android:title="@string/manage_locations"/>

    <item
        android:id="@+id/action_publish"
        android:icon="@drawable/ic_publish"
        android:title="@string/action_publish_course"/>

    <item
        android:id="@+id/action_unpublish"
        android:icon="@drawable/ic_unpublish"
        android:title="@string/action_unpublish_course"/>

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/action_archive_course"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"/>
</menu>