<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_view"
        android:icon="@drawable/ic_pdf"
        android:title="@string/action_view_invoice"
        android:visible="false" />

    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_download"
        android:title="@string/action_download_invoice"
        android:visible="false" />

    <item
        android:id="@+id/action_extend"
        android:icon="@drawable/ic_extend"
        android:title="@string/action_extend_token"
        android:visible="false" />

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_cancel"
        android:title="@string/action_cancel_invoice"
        android:visible="false" />
</menu>